pred spaním úpravy na notification blocku

--- a/css/style.css
+++ b/css/style.css
@@ -315,9 +315,11 @@ iframe {
     height: 20px;
 }
 
+/* OVERLAY -----------------------------------------------------------------------------------------------------------*/
 
 .overlay {
     display: none;
+    z-index: 5;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -327,8 +329,11 @@ iframe {
     background-color: rgba(0,0,0,0.70);
 }
 
-.popup {
+/* POPUP STORY -------------------------------------------------------------------------------------------------------*/
+
+.popup-story-wrapper {
     display: none;
+    z-index: 10;
     position: fixed;
     top: 80px;
     bottom: 20px;
@@ -342,7 +347,7 @@ iframe {
     overflow: hidden;
 }
 
-.popup-header {
+.popup-story-header {
     position: absolute;
     top: 0;
     left: 0;
@@ -358,7 +363,7 @@ iframe {
     text-align: center;
 }
 
-.popup-content {
+.popup-story-content {
     position: absolute;
     top: 40px;
     bottom: 0;
@@ -370,7 +375,7 @@ iframe {
     background-color: white;
 }
 
-.popup-close {
+.popup-story-close {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -380,7 +385,50 @@ iframe {
     /*background: url("close-white.png") no-repeat center fixed;*/
 }
 
-.popup-close img {
+.popup-story-close img {
     width: 20px;
     height: 20px;
+}
+
+/* POPUP NOTIFICATION ------------------------------------------------------------------------------------------------*/
+
+.popup-notification {
+    display: block;
+    z-index: 3;
+    position: fixed;
+    top: 80px;
+    right: 5px;
+    width: 300px;
+    height: 400px;
+    background-color: black;
+    background-color: rgba(0, 0, 0, 0.85);
+    color: white;
+    padding: 10px;
+    border-radius: 3px;
+    overflow: hidden;
+
+}
+
+.popup-notification-arrow {
+    position: absolute;
+    top: -10px;
+    right: 0;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid rgba(0,0,0,0.85);
+}
+
+.popup-notification-content {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    overflow-y: scroll;
+    width: auto;
+    padding: 10px;
+
+
 }
